--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   win32: ^4.1.1
   fluent_ui: ^4.2.0
   window_manager: ^0.3.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
