--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  kindle_repository:
+    path: packages/kindle_repository
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,6 +44,7 @@ dependencies:
   fluent_ui: ^4.2.0
   window_manager: ^0.3.0
   equatable: ^2.0.5
+  flutter_libserialport: ^0.3.0
 
 dev_dependencies:
   flutter_test:
