--- a/packages/kindle_repository/pubspec.yaml
+++ b/packages/kindle_repository/pubspec.yaml
@@ -8,8 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  build_runner: ^2.3.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_generator: ^2.0.0
+  json_serializable: ^6.6.1
 
 dev_dependencies:
   flutter_test:
