--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   fluent_ui: ^4.2.0
   window_manager: ^0.3.0
   equatable: ^2.0.5
-  flutter_libserialport: ^0.3.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
