--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   equatable: ^2.0.5
   json_annotation: ^4.8.0
   build_runner: ^2.3.3
+  pdf: ^3.9.0
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/OpenSans/OpenSans-Regular.ttf
+    - assets/OpenSans/OpenSans-Bold.ttf
+    - assets/OpenSans/OpenSans-Italic.ttf
+    - assets/OpenSans/OpenSans-BoldItalic.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
