--- a/packages/kindle_repository/pubspec.yaml
+++ b/packages/kindle_repository/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   build_runner: ^2.3.3
   equatable: ^2.0.5
+  file_picker: ^5.2.5
   flutter:
     sdk: flutter
   hive: ^2.2.3
